--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -603,22 +603,22 @@ function renderMemberTabs() {
     const el = document.getElementById('memberList2');
     if (el) {
         el.innerHTML = members.map(m => {
-            const isActive = currentMember === m;
-            const timer = activeTimers[m];
-            const isRunning = !!timer;
+            const isActive   = (currentMember === m);
+            const timer      = activeTimers[m];
+            const isRunning  = !!timer;
             const currentTask = timer ? timer.task : null;
 
             const taskInfo = isRunning
                 ? `<div class="member-task">${ICONS[currentTask] || '📋'} ${currentTask}</div>`
                 : '<div class="member-task idle">待機中</div>';
 
-            // 👇 ここでランプ用クラスを決める
+            // ランプ用クラス
             let statusClass = 'idle';
             if (isRunning) {
                 if (isAbnormalTask(currentTask)) {
-                    statusClass = 'alarm';   // 🔴 異常処置 / 不具合対応 → 赤点滅
+                    statusClass = 'alarm';   // 🔴 異常処置 / 不具合対応
                 } else {
-                    statusClass = 'running'; // 🟢 それ以外は緑
+                    statusClass = 'running'; // 🟢 それ以外
                 }
             }
 
@@ -642,24 +642,11 @@ function renderMemberTabs() {
     }
 
     const nameEl = document.getElementById('currentMemberName');
-    if (nameEl && currentMember) nameEl.textContent = `- ${currentMember}`;
+    if (nameEl && currentMember) {
+        nameEl.textContent = `- ${currentMember}`;
+    }
 }
 
-            }).join('');
-        }
-
-        const mobileSelect = document.getElementById('mobileMemberSelect');
-        if (mobileSelect) {
-            mobileSelect.innerHTML = members.map(m => {
-                const timer = activeTimers[m];
-                const taskInfo = timer ? ` (${timer.task})` : '';
-                return `<option value="${m}" ${m===currentMember?'selected':''}>${m}${taskInfo}</option>`;
-            }).join('');
-        }
-
-        const nameEl = document.getElementById('currentMemberName');
-        if (nameEl && currentMember) nameEl.textContent = `- ${currentMember}`;
-    }
 function setCurrentMember(m) {
     currentMember = m;
     // 端末ごとに記憶する
@@ -2114,7 +2101,9 @@ function openAddModal(startOverride, endOverride) {
     taskName.includes("不具合対応")
   );
 }
-
+function isAbnormalTask(task) {
+    return task === '異常処置' || task === '不具合対応';
+}
     </script>
 </body>
 </html>
