Apply dark theme styles to gyomu_nippo.html

--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -253,6 +253,187 @@
   background:#020617;
   overflow:hidden;
 }
+/* === シャープ & 落ち着いたダーク寄りデザインに上書き === */
+
+/* 画面全体 */
+body {
+  background: #020617 !important;  /* ほぼ黒に近い濃紺 */
+  color: #e5e7eb !important;       /* 明るすぎないグレー */
+}
+
+/* ヘッダー・タブ */
+.header {
+  background: #020617 !important;
+  box-shadow: none !important;
+}
+
+.tabs {
+  background: #020617 !important;
+  border-bottom: 1px solid #1f2937 !important;
+}
+
+.tab {
+  border-radius: 0 !important;
+  color: #9ca3af !important;
+}
+
+.tab:hover {
+  background: #020617 !important;
+}
+
+.tab.active {
+  background: #020617 !important;
+  color: #e5e7eb !important;
+  border-bottom-color: #4f46e5 !important;
+}
+
+/* カード系コンポーネント */
+.card,
+.tracker-sidebar,
+.tracker-right,
+.gantt-card,
+.chart-member,
+.chart-legend,
+.setting-item,
+.task-manager-item,
+.summary-item,
+.record-item,
+.pending-alert,
+.pending-item,
+.pie-chart-center {
+  border-radius: 0 !important;
+  box-shadow: none !important;
+  background: #020617 !important;
+  border: 1px solid #1f2937 !important;
+}
+
+/* 合計サマリだけ少しアクセント */
+.summary-item.total {
+  background: #111827 !important;
+  border-color: #4f46e5 !important;
+}
+
+/* 担当者リスト・タイマーバー・タスクボタン */
+.member-list-item,
+.timer-bar,
+.task-btn,
+.add-task-btn {
+  border-radius: 0 !important;
+  box-shadow: none !important;
+  background: #020617 !important;
+  border: 1px solid #1f2937 !important;
+  color: #e5e7eb !important;
+}
+
+.member-list-item:hover,
+.task-btn:hover,
+.add-task-btn:hover,
+.record-item:hover {
+  background: #111827 !important;
+}
+
+/* モーダル */
+.modal-content {
+  border-radius: 0 !important;
+  background: #020617 !important;
+  border: 1px solid #1f2937 !important;
+}
+
+/* 入力欄・ボタンなど */
+input,
+select,
+textarea,
+.btn,
+.tm-progress,
+.tm-deadline {
+  border-radius: 0 !important;
+  background: #020617 !important;
+  border: 1px solid #374151 !important;
+  color: #e5e7eb !important;
+}
+
+input::placeholder,
+textarea::placeholder {
+  color: #6b7280;
+}
+
+/* ボタンカラー */
+.btn-primary {
+  background: #4f46e5 !important;
+  border-color: #4f46e5 !important;
+  color: #e5e7eb !important;
+}
+
+.btn-secondary {
+  background: #111827 !important;
+  border-color: #4b5563 !important;
+  color: #e5e7eb !important;
+}
+
+.btn-danger {
+  background: #b91c1c !important;
+  border-color: #b91c1c !important;
+  color: #fee2e2 !important;
+}
+
+.btn-success {
+  background: #15803d !important;
+  border-color: #15803d !important;
+  color: #dcfce7 !important;
+}
+
+/* ガントチャート周り */
+.gantt-container {
+  border-radius: 0 !important;
+  background: #020617 !important;
+  border: 1px solid #1f2937 !important;
+}
+
+.gantt-header {
+  background: #020617 !important;
+}
+
+.gantt-time-label {
+  background: #020617 !important;
+  border-right: 1px solid #1f2937 !important;
+  color: #9ca3af !important;
+}
+
+.gantt-time-label.current {
+  background: #4f46e5 !important;
+  color: #e5e7eb !important;
+}
+
+.gantt-row {
+  background: #020617 !important;
+}
+
+.gantt-row:hover {
+  background: #0b1120 !important;
+}
+
+.gantt-cell.current {
+  background: rgba(79, 70, 229, 0.12) !important;
+}
+
+/* トースト通知 */
+.toast {
+  background: #111827 !important;
+  color: #e5e7eb !important;
+  box-shadow: none !important;
+}
+
+/* 未入力アラートの色味も少しだけ暗く */
+.record-item[style*="未入力"],
+.record-item.gap {
+  background: #1f2933 !important;
+  border: 1px dashed #f97316 !important;
+}
+
+/* 既に実装済みのステータスランプ（丸）はそのまま活かす */
+.member-list-item .status {
+  border-radius: 50% !important;
+}
 
     </style>
 </head>
