--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -253,6 +253,67 @@
   background:#020617;
   overflow:hidden;
 }
+/* === 角丸を無くしシャープに統一（配色は変更しない）=== */
+
+/* カード・パネル・ボックス */
+.card,
+.tracker-sidebar,
+.tracker-right,
+.summary-item,
+.record-item,
+.task-btn,
+.add-task-btn,
+.timer-bar,
+.setting-item,
+.task-manager-item,
+.pie-chart-center,
+.pending-item,
+.pending-alert,
+.gantt-container,
+.gantt-header,
+.gantt-row,
+.gantt-card,
+.chart-member,
+.chart-legend,
+.modal-content {
+  border-radius: 0 !important;
+  box-shadow: none !important;
+}
+
+/* ボタン */
+.btn,
+.btn-primary,
+.btn-secondary,
+.btn-success,
+.btn-danger {
+  border-radius: 0 !important;
+  box-shadow: none !important;
+}
+
+/* 入力UI */
+input,
+select,
+textarea {
+  border-radius: 0 !important;
+  box-shadow: none !important;
+}
+
+/* タブ */
+.tab {
+  border-radius: 0 !important;
+  box-shadow: none !important;
+}
+
+/* ガント・表セル */
+.gantt-cell,
+.gantt-time-label {
+  border-radius: 0 !important;
+}
+
+/* ※ ステータスランプは “意図して丸のまま” 残す */
+.member-list-item .status {
+  border-radius: 50% !important;
+}
 
 
     </style>
