--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -315,6 +315,72 @@ textarea {
   border-radius: 50% !important;
 }
 
+/* 円グラフ中央の合計表示を非表示 */
+.pie-chart-center {
+  display: none !important;
+}
+/* ====== 全体の境界線を濃く・くっきり ====== */
+
+:root {
+  --border-strong: #888888;
+}
+
+/* カードやブロック */
+.card,
+.tracker-sidebar,
+.tracker-right,
+.summary-item,
+.record-item,
+.setting-item,
+.task-manager-item,
+.chart-member,
+.gantt-container,
+.gantt-header,
+.gantt-row,
+.gantt-cell,
+.chart-legend,
+.pending-alert,
+.pending-item {
+  border: 1px solid var(--border-strong) !important;
+}
+
+/* リストの区切り */
+.record-item {
+  border-left: 4px solid #666;
+}
+
+/* 入力欄・セレクタ */
+input,
+select,
+textarea {
+  border: 1px solid var(--border-strong) !important;
+}
+
+/* タブ下線を強く */
+.tabs {
+  border-bottom: 2px solid var(--border-strong) !important;
+}
+
+.tab.active {
+  border-bottom: 3px solid #667eea !important;
+}
+
+/* ガントのマス目をくっきり */
+.gantt-cell {
+  border-right: 1px solid #777 !important;
+}
+
+.gantt-row {
+  border-bottom: 1px solid #777 !important;
+}
+
+/* 円グラフラベルの視認性強化 */
+.pie-label {
+  background: rgba(255,255,255,0.95);
+  border: 1px solid #777;
+  padding: 4px 6px;
+  box-shadow: 0 0 2px rgba(0,0,0,0.3);
+}
 
     </style>
 </head>
