--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -483,7 +483,15 @@ textarea {
             </div>
             <div class="card">
                 <h3>☁️ Firebase</h3>
-                <textarea id="firebaseConfig" style="width:100%;height:70px;font-family:monospace;font-size:10px;padding:8px;border:2px solid #ddd;border-radius:8px;margin-bottom:10px;">{"apiKey":"AIzaSyAwZQMhF5qIv1XSADce2JiN_qAV88TxEQ8","projectId":"qcnippo"}</textarea>
+              <textarea id="firebaseConfig" style="width:100%;height:70px;font-family:monospace;font-size:10px;padding:8px;border:2px solid #ddd;border-radius:8px;margin-bottom:10px;">{
+  "apiKey": "AIzaSyAwZQMhF5qIv1XSADce2JiN_qAV88TxEQ8",
+  "authDomain": "qcnippo.firebaseapp.com",
+  "databaseURL": "https://qcnippo-default-rtdb.asia-southeast1.firebasedatabase.app",
+  "projectId": "qcnippo",
+  "storageBucket": "qcnippo.firebasestorage.app",
+  "messagingSenderId": "1094762407781",
+  "appId": "1:1094762407781:web:d4c4a9302fd8e86697e38c"
+}</textarea>
                 <div style="display:flex;gap:8px;flex-wrap:wrap;">
                     <button class="btn btn-primary" onclick="connectFB()">接続 / 再接続</button>
                 </div>
