--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -37,7 +37,14 @@
     .member-list-item .member-task.idle { color: #999; }
     .member-list-item.active .member-task { color: rgba(255,255,255,0.9); }
     .member-list-item.active .member-task.idle { color: rgba(255,255,255,0.6); }
-    .member-list-item .status { width: 18px; height: 18px; border-radius: 50%; flex-shrink: 0; margin-left: 12px; }
+.member-list-item .status {
+  width: 18px;
+  height: 18px;
+  border-radius: 50% !important;
+  flex-shrink: 0;
+  margin-left: 12px;
+  display: inline-block; 
+}
     .member-list-item .status.running { background: #10b981; animation: pulse 1.5s infinite; box-shadow: 0 0 12px #10b981; }
     .member-list-item .status.idle { background: #d1d5db; }
     .member-list-item.active .status.idle { background: rgba(255,255,255,0.5); }
