--- a/nippoview.html
+++ b/nippoview.html
@@ -354,7 +354,7 @@
         ・上部フィルタの「整理No」で品番を選択し、期間を指定して「絞り込み」を押すと、<br>
         &emsp;その品番の <strong>不良数（棒グラフ）</strong> と <strong>不良率（折れ線）</strong> を表示します。<br>
         ・「横軸」を <strong>検査日 / ロットNo</strong> で切り替えることで、見たい軸で推移を確認できます。<br>
-        ・ロット軸のときは、ロットNoの2桁目から月を読み取り、月順（1〜12月）に並び替えています。
+        ・ロット軸のときは、ロットNoの<strong>3桁目</strong>から月を読み取り、月順（1〜12月）に並び替えています。
       </div>
     </div>
   </div>
@@ -1106,17 +1106,17 @@ function exportCSV() {
   URL.revokeObjectURL(url);
 }
 
-/* ▼ ロットNo の2桁目 → 月に変換 */
+/* ▼ ロットNo の3桁目 → 月に変換 */
 function getMonthFromLot(lot){
   if(!lot) return 99;
   const s = lot.toString().trim();
-  if(s.length < 2) return 99;
-  const ch = s[1].toUpperCase();
+  if(s.length < 3) return 99;          // 3文字未満は判定不可
+  const ch = s[2].toUpperCase();      // 3桁目を見る
 
-  if(ch >= '1' && ch <= '9') return parseInt(ch, 10);
-  if(ch === '0' || ch === 'O') return 10;
-  if(ch === 'N') return 11;
-  if(ch === 'D') return 12;
+  if(ch >= '1' && ch <= '9') return parseInt(ch, 10); // 1〜9 → 1〜9月
+  if(ch === '0' || ch === 'O') return 10;             // 0 / O → 10月
+  if(ch === 'N') return 11;                           // N → 11月
+  if(ch === 'D') return 12;                           // D → 12月
 
   return 99; // 判定できないものは後ろ
 }
@@ -1177,7 +1177,7 @@ function updateDefectTrend() {
 
   let labels;
   if (xAxisMode === 'lot') {
-    // ロット軸：2桁目→月でソート
+    // ロット軸：3桁目→月でソート
     labels = Array.from(bucketMap.keys()).sort((a, b) => {
       const ma = getMonthFromLot(a);
       const mb = getMonthFromLot(b);
@@ -1276,7 +1276,7 @@ function updateDefectTrend() {
             text: axisLabel
           },
           ticks: {
-            autoSkip: !isLotAxis,          // ロットのときは autoSkip しない
+            autoSkip: !isLotAxis,          // ロットのときは autoSkip しない（全部表示）
             maxRotation: isLotAxis ? 45 : 0,
             minRotation: isLotAxis ? 45 : 0
           }
